prevent LazyInitializationException and add new API endpoints
- Added constructor in RouteListDTO to safely map Route entities to DTOs.
- Updated RouteListDTO to retrieve only spot IDs and owner ID.
- Fixed LazyInitializationException when accessing spots in Route by using @EntityGraph in RouteRepository.
- Refactored Route controller to avoid multiple repository calls and ensure efficient data loading.
- Ensured consistent use of DTOs instead of entities in API responses.

New endpoints:
- GET /tourists/{id} : get tourist details by ID.
- GET /spots/validated/{city} : get validated spots for a given city.
- POST /routes : create a new route.
- GET /routes : list all routes.